# windows_metadata

./: LICENSE  README.md  project.toml  pyproject.toml  setup.py
src/windows_metadata/: __init__.py  windows_details.py  windows_metadata.py
