[build-system]
requires = ["setuptools>=61.0.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "windows_metadata"
version = "0.1.1"
authors = [
  { name="Sébastien Paine", email="sebastienpaine@me.com" },
]
description = "Read Windows metadata from files"
readme = "README.md"
license = { file="LICENSE" }
requires-python = ">=3.6"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: Microsoft :: Windows",
]
dependencies = [
    "pywin32",
]
keywords = ["windows", "metadata", "attributes", "details"]

[project.optional-dependencies]
dev = ["black", "pylint"]

[project.urls]
"Homepage" = "https://github.com/sebastienpaine/windows_metadata"
"Bug Tracker" = "https://github.com/sebastienpaine/windows_metadata/issues"
